packages/client/src/styles/components/loading.module.css
#loading-spinner {
  width: 10vw;
  z-index: 100001;
}

#loading {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100000;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: var(--min-width);
  background-color: rgba(255, 255, 255, 0.575);
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

